# scikit-hep-testdata

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  codecov.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
dev/make-root/: Run2012BC_DoubleMuParked_Muons_rntuple_1000evts.md  double32_float16.C  rntuple_1jag_int_float.C  rntuple_Run2012BC_DoubleMuParked_Muons_1000evts.md  rntuple_atomic_bitset.C  rntuple_bit.C  rntuple_class_inheritance.C  rntuple_emptystruct_invalidvar.C  rntuple_extension_columns.C  rntuple_float_types.C  rntuple_imported_NanoAOD.md  rntuple_index_multicluster.C  rntuple_inheritance_class.C  rntuple_int_5.C  rntuple_int_5e4.C  rntuple_int_float.C  rntuple_int_multicluster.C  rntuple_int_vfloat_tlv_vtlv.C  rntuple_multiple_cluster_groups.C  rntuple_multiple_representations.C  rntuple_nested_structs.C  rntuple_split_3e4.C  rntuple_splitint.C  rntuple_splitint16.C  rntuple_splitint32.C  rntuple_splitint64.C  rntuple_stl_containers.C  stl_containers.C  uproot-issue-1043.C  uproot-issue38c.py  uproot-issue407.C  uproot_issue_1229.C  uproot_issue_1502.C  uproot_issue_407.C
dev/make-root/rntuple_inherited_structs/: CMakeLists.txt  LinkDef.h  README.md  main.cpp  structs.h
scikit_example_root_files/: __init__.py  remote_datasets.yml  remote_files.py
skhep_testdata/: __init__.py  __main__.py  local_files.py  remote_files.py
src/skhep_testdata/: __init__.py  __main__.py  local_files.py  remote_datasets.yml  remote_files.py  version.py
src/skhep_testdata/data/: Run2012BC_DoubleMuParked_Muons_1000evts_rntuple_v1-0-0-0.root  Run2012BC_DoubleMuParked_Muons_1000evts_rntuple_v1.root  __init__.py  cmsopendata2015_ttbar_19980_NANOAOD_RNTupleImporter_rntuple_v1-0-0-1.root  issue-589.root  ntpl001_staff_rntuple_v1-0-1-0.root  pyhf-ins1748602-probability-models.doi  pylhe-testfile-hpcgen.hdf5  pylhe-testfile-hpcgen.hdf5.readme  pylhe-testfile-madgraph-2.0.0-wbj.lhe  pylhe-testfile-madgraph-2.0.0-wbj.lhe.readme  pylhe-testfile-madgraph-2.2.1-Z-fxfx.lhe.gz.readme  pylhe-testfile-madgraph-2.2.1-Z-fxfx.lhe.readme  pylhe-testfile-madgraph-2.2.1-Z-mlm.lhe.readme  pylhe-testfile-powheg-box-v2-W.lhe  pylhe-testfile-powheg-box-v2-Z.lhe  pylhe-testfile-powheg-box-v2-Zj.lhe  pylhe-testfile-powheg-box-v2-directphoton.lhe  pylhe-testfile-powheg-box-v2-hvq.lhe  pylhe-testfile-powheg-box-v2-trijet.lhe  pylhe-testfile-pr180.lhe  pylhe-testfile-pythia-6.413-ttbar.lhe.readme  pylhe-testfile-pythia-8.3.14-weakbosons.lhe  pylhe-testfile-sherpa-3.0.1-eejjj.lhe  pylhe-testfile-sherpa.hdf5.readme  pylhe-testfile-whizard-3.1.4-eeWW.lhe  pylhe-testlhef3.lhe  rntviewer-testfile-multiple-rntuples-v1-0-0-0.root  test_1jag_int_float_rntuple_v1-0-0-0.root  test_1jag_int_float_rntuple_v1.root  test_atomic_bitset_rntuple_v1-0-0-0.root  test_atomic_bitset_rntuple_v1.root  test_bit_rntuple_v1.root  test_class_inheritance_rntuple_v1-0-0-1.root  test_emptystruct_invalidvar_rntuple_v1-0-0-0.root  test_emptystruct_invalidvar_rntuple_v1.root  test_extension_columns_rntuple_v1.root  test_index_multicluster_rntuple_v1.root  test_int_5e4_rntuple_v1-0-0-0.root  test_int_5e4_rntuple_v1.root  (+97 more)
tests/: test_local_files.py  test_remote_datasets.yml  test_remote_files.py
tests/dummy-package/: setup.cfg  setup.py
tests/dummy-package/dummy_package/: __init__.py
tests/dummy-package/tests/: test_run.py
