[metadata]
name = scikit_hep_testdata
description = Example HEP files for testing and demonstrating
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/scikit-hep-testdata
author = Ben Krikler
author_email = b.krikler@cern.ch
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    ROOT
    HEP
    testing

[options]
packages = find:
install_requires =
    importlib_resources>=1.1
    pyyaml
    contextlib2;python_version<"3.3"
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
include_package_data = True
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=4.0.0,<5.4.0
    pytest-cov
    pytest-pep8

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,B,B9

[aliases]
test = pytest

[tool:pytest]
addopts = -v -x --doctest-modules --ignore=setup.py --cov=skhep_testdata --pep8
pep8maxlinelength = 120
norecursedirs = src dev
