[metadata]
name = scikit_hep_testdata
description = Example HEP files for testing and demonstrating
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/scikit-hep-testdata
author = Ben Krikler
author_email = b.krikler@cern.ch
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed
keywords =
    ROOT
    HEP
    testing

[options]
packages = find:
install_requires =
    pyyaml
    requests
    importlib-resources>=1.3;python_version<"3.9"
python_requires = >=3.6
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    scikit-hep-testdata=skhep_testdata.__main__:main
    skhep-testdata=skhep_testdata.__main__:main

[options.extras_require]
test =
    pytest>=4.0.0

[flake8]
exclude = docs
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,B,B9

[tool:pytest]
addopts = -v -ra
norecursedirs = src

[coverage:run]
branch = True
relative_files = True
source_pkgs =
    skhep_testdata
omit =
    *__main__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

[mypy]
files = src
python_version = 3.6
warn_unused_configs = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True

[mypy-skhep_testdata.version.*]
ignore_missing_imports = True

[mypy-importlib_resources.*]
ignore_missing_imports = True

[mypy-contextlib2.*]
ignore_missing_imports = True
